tests/lit/tcheck/missing_00.asl
// RUN: not %asli --nobanner %s | %decolor | filecheck %s

func T()
begin
    UndefinedFunction();
// CHECK: Type error: Unknown procedure UndefinedFunction
end
